# DocuMind.Python

./: .gitignore  DEPLOY.md  Procfile  documind.db  gmail_credentials.json  gmail_token.json  pyproject.toml  ragas_collected.json  requirements.txt  startup.sh  test_agent.py  test_bge.py  test_document.py  test_pdf.py  test_weaviate.py  wipe_search_index.py
.github/workflows/: main_documind-api.yml
DocuMind/agents/: documind_agent.py
DocuMind/api/: dependencies.py  main.py
DocuMind/api/routers/: auth.py  documents.py  email.py
DocuMind/azure/: chat_client.py  embedding_client.py  helpers.py
DocuMind/bge/: embedding_client.py
DocuMind/core/: reranker.py  settings.py  token_counter.py
DocuMind/core/auth/: database.py  jwt_handler.py  service.py
DocuMind/core/errors/: exceptions.py
DocuMind/core/logging/: logger.py
DocuMind/documents/indexing/: document_indexer.py
DocuMind/documents/models/: document.py  document_chunk.py
DocuMind/documents/processing/: chunk_builder.py
DocuMind/documents/protocols/: chunk_builder.py  document_reader.py  layout_analyzer.py  ocr_engine.py
DocuMind/documents/raw/: raw_document.py
DocuMind/documents/readers/: azure_document_reader.py  pdf_reader.py
DocuMind/email/: indexer.py  models.py
DocuMind/email/providers/: gmail.py
DocuMind/eval/: gold_set.json  recall_eval.py
DocuMind/ollama/: chat_client.py
DocuMind/search/: azure_search_store.py  factory.py  protocols.py  weaviate_store.py
scripts/: seed_demo_emails.py
tests/: evaluate_ragas.py  ragas_dataset.py
